test: copilot review 반영 - 테스트 코드 수정